[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-utils"
version = "0.1.1"
authors = [
    { name = "Marcelo Soares", email = "marcelo.me.soares@gmail.com" }
]
description = "General utilities to make streamlit app creation easier in an object-oriented manner."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Widget Sets",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/marcelomendoncasoares/streamlit-utils"
"Release Notes" = "https://github.com/marcelomendoncasoares/streamlit-utils/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/marcelomendoncasoares/streamlit-utils"


[tool.setuptools]
package-data = { '*' = ["py.typed"] }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[tool.mypy]
packages = ["streamlit_utils"]
pretty = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.coverage]
run.source = ["src"]
